fix: fixed not found not showing right

--- a/src/app/components/forum/post/post.component.scss
+++ b/src/app/components/forum/post/post.component.scss
@@ -107,12 +107,6 @@
           p {
             font-size: $fontsizeSmallOne;
           }
-          .selected-button-green {
-            background-color: green;
-          }
-          .selected-button-red {
-            background-color: red;
-          }
         }
       }
     }
